seaqt/QtWebChannel/gen_qqmlwebchannel.h

class QMetaObject;
class QObject;
class QQmlWebChannel;
class QVariant;
typedef struct QChildEvent QChildEvent;
typedef struct QEvent QEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QQmlWebChannel QQmlWebChannel;
typedef struct QTimerEvent QTimerEvent;
typedef struct QVariant QVariant;
QQmlWebChannel* QQmlWebChannel_new();
QQmlWebChannel* QQmlWebChannel_new2(QObject* parent);
QMetaObject* QQmlWebChannel_metaObject(const QQmlWebChannel* self);
void* QQmlWebChannel_metacast(QQmlWebChannel* self, const char* param1);
int QQmlWebChannel_metacall(QQmlWebChannel* self, int param1, int param2, void** param3);
struct miqt_string QQmlWebChannel_tr(const char* s);
struct miqt_string QQmlWebChannel_trUtf8(const char* s);
void QQmlWebChannel_registerObjects(QQmlWebChannel* self, struct miqt_map /* of struct miqt_string to QVariant* */  objects);
void QQmlWebChannel_connectTo(QQmlWebChannel* self, QObject* transport);
void QQmlWebChannel_disconnectFrom(QQmlWebChannel* self, QObject* transport);
struct miqt_string QQmlWebChannel_tr2(const char* s, const char* c);
struct miqt_string QQmlWebChannel_tr3(const char* s, const char* c, int n);
struct miqt_string QQmlWebChannel_trUtf82(const char* s, const char* c);
struct miqt_string QQmlWebChannel_trUtf83(const char* s, const char* c, int n);
bool QQmlWebChannel_override_virtual_metaObject(void* self, intptr_t slot);
QMetaObject* QQmlWebChannel_virtualbase_metaObject(const void* self);
bool QQmlWebChannel_override_virtual_metacast(void* self, intptr_t slot);
void* QQmlWebChannel_virtualbase_metacast(void* self, const char* param1);
bool QQmlWebChannel_override_virtual_metacall(void* self, intptr_t slot);
int QQmlWebChannel_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QQmlWebChannel_override_virtual_event(void* self, intptr_t slot);
bool QQmlWebChannel_virtualbase_event(void* self, QEvent* event);
bool QQmlWebChannel_override_virtual_eventFilter(void* self, intptr_t slot);
bool QQmlWebChannel_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QQmlWebChannel_override_virtual_timerEvent(void* self, intptr_t slot);
void QQmlWebChannel_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QQmlWebChannel_override_virtual_childEvent(void* self, intptr_t slot);
void QQmlWebChannel_virtualbase_childEvent(void* self, QChildEvent* event);
bool QQmlWebChannel_override_virtual_customEvent(void* self, intptr_t slot);
void QQmlWebChannel_virtualbase_customEvent(void* self, QEvent* event);
bool QQmlWebChannel_override_virtual_connectNotify(void* self, intptr_t slot);
void QQmlWebChannel_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QQmlWebChannel_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QQmlWebChannel_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
const QMetaObject* QQmlWebChannel_staticMetaObject();
void QQmlWebChannel_delete(QQmlWebChannel* self);